login / admin page ok

--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -12,10 +12,11 @@
 
 
 <!--test button -->
-<button><a href="/admin">게시판</a></button>
+<button><a href="/notice">게시판</a></button>
+<button><a href="/notice/write">게시판쓰기</a></button>
 <button><a href="/loginForm">로그인</a></button>
 <button><a href="/joinForm">회원가입</a></button>
 <button><a href="#">로그아웃</a></button>
-<button><a href="#">지도</a></button>
+<button><a href="/map">지도</a></button>
 <button><a href="#">캘린더</a></button>
 <button><a href="#">예약</a></button>
