--- a/src/main/resources/templates/LogIn/joinForm.mustache
+++ b/src/main/resources/templates/LogIn/joinForm.mustache
@@ -1,17 +1,5 @@
-<form action="/join" method = post>
-    <!-- Email input -->
-    <div class="form-outline mb-4">
-        <input type="text" id="username" class="form-control" />
-        <label class="form-label" for="form2Example1">Email address</label>
-    </div>
-
-    <!-- Password input -->
-    <div class="form-outline mb-4">
-        <input type="password" id="password" class="form-control" />
-        <label class="form-label" for="form2Example2">Password</label>
-    </div>
-
-
-    <!-- Submit button -->
-    <button type="submit" class="btn btn-primary btn-block mb-4">Sign in</button>
+<form action="join" method="post">
+    <input type="text" name="username">
+    <input type="password" name="password">
+    <input type="submit" value="GO">
 </form>
