에약시스템 데이터 전송 및 데이터베이스 저장 확인

--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -19,4 +19,4 @@
 <button><a href="#">로그아웃</a></button>
 <button><a href="/map">지도</a></button>
 <button><a href="#">캘린더</a></button>
-<button><a href="#">예약</a></button>
+<button><a href="/reservation">예약</a></button>
