--- a/src/main/resources/templates/layout/footer.mustache
+++ b/src/main/resources/templates/layout/footer.mustache
@@ -1,2 +1,11 @@
+<!--<footer class="py-5 bg-blue mt-auto" style="text-align: center">-->
+<!--    <p>상호 : 풀스택펜션 | 대표자 : 손재학 | 소재지 : 경북 경산시 하양읍 하양로 13-13</p>-->
+<!--    <p>사업자 등록번호 : 000-0000-0000</p>-->
+<!--    <p>문의</p>-->
+<!--    <p>펜션 이메일 : alreadysauce@gmail.com</p>-->
+<!--    <p>펜션 전화번호 : 000-000-0000</p>-->
+<!--    <a href="/loginForm">관리자 로그인</a>-->
+<!--</footer>-->
+
 </body>
 </html>
