--- a/src/main/resources/templates/notice/noticeShow.mustache
+++ b/src/main/resources/templates/notice/noticeShow.mustache
@@ -18,7 +18,7 @@
     {{/notice}}
     </tbody>
 </table>
-<button><a href="">게시판으로 이동하기</a></button>
+<button><a href="/notice">게시판으로 이동하기</a></button>
 <button><a href="/notice/{{notice.idx}}/edit">게시글 수정하기</a></button>
 <button><a href="/notice/{{notice.idx}}/delete">게시글 삭제하기</a></button>
 
