--- a/src/main/resources/templates/LogIn/loginForm.mustache
+++ b/src/main/resources/templates/LogIn/loginForm.mustache
@@ -1,3 +1,5 @@
+<h1>로그인 페이지 입니다.</h1>
+
 <form action="/login" method="post">
     <input type="text" name="username">
     <input type="password" name="password">
