--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -5,18 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
-
 <!--test button -->
-<button><a href="/notice">게시판</a></button>
-<button><a href="/notice/write">게시판쓰기</a></button>
-<button><a href="/loginForm">로그인</a></button>
-<button><a href="/joinForm">회원가입</a></button>
-<button><a href="#">로그아웃</a></button>
-<button><a href="/map">지도</a></button>
-<button><a href="#">캘린더</a></button>
-<button><a href="/reservation">예약</a></button>
+
+<!--<button><a href="/notice">게시판</a></button>-->
+<!--<button><a href="/notice/write">게시판쓰기</a></button>-->
+
+<!--<button><a href="/loginForm">로그인</a></button>-->
+<!--<button><a href="/joinForm">회원가입</a></button>-->
+<!--<button><a href="/logoutPopup">로그아웃</a></button>-->
+<!--<button><a href="/admin/management">관리자게시판</a></button>-->
+<!--<button><a href="/map">지도</a></button>-->
+<!--<button><a href="/calendar">캘린더</a></button>-->
+<!--<button><a href="/reservation">예약</a></button>-->
