--- a/src/main/resources/templates/notice/noticeWrite.mustache
+++ b/src/main/resources/templates/notice/noticeWrite.mustache
@@ -2,9 +2,11 @@
 
 <form action="/notice/writeOk" method="post">
     <input type="text" name="title">
+    <input type="text" name="writer">
     <textarea name="content"></textarea>
     <input type="submit" value="작성">
-    <button><a href="notice/notice">게시판으로 돌아가기</a></button>
+<!--    <input type="hidden" name="writeTime">-->
 </form>
+<button><a href="/notice">게시판으로 돌아가기</a></button>
 
 {{>layout/footer}}
