--- a/src/main/resources/templates/layout/footer.mustache
+++ b/src/main/resources/templates/layout/footer.mustache
@@ -1,11 +1,97 @@
-<!--<footer class="py-5 bg-blue mt-auto" style="text-align: center">-->
-<!--    <p>상호 : 풀스택펜션 | 대표자 : 손재학 | 소재지 : 경북 경산시 하양읍 하양로 13-13</p>-->
-<!--    <p>사업자 등록번호 : 000-0000-0000</p>-->
-<!--    <p>문의</p>-->
-<!--    <p>펜션 이메일 : alreadysauce@gmail.com</p>-->
-<!--    <p>펜션 전화번호 : 000-000-0000</p>-->
-<!--    <a href="/loginForm">관리자 로그인</a>-->
-<!--</footer>-->
 
+<!-- Footer Start -->
+<div
+        class="container-fluid footer bg-dark text-light footer mt-5 pt-5 wow fadeIn"
+        data-wow-delay="0.1s"
+>
+    <div class="container py-5">
+        <div class="row g-5">
+            <div class="col-lg-3 col-md-6">
+                <h5 class="text-light mb-4">Address</h5>
+                <p class="mb-2">
+                    <i class="fa fa-map-marker-alt me-3"></i>경상북도 경산시 하양읍 하양로 13-13
+                </p>
+                <p class="mb-2">
+                    <i class="fa fa-phone-alt me-3"></i>010 2697 7976
+                </p>
+                <p class="mb-2">
+                    <i class="fa fa-envelope me-3"></i>alreadysauce@gmail.com
+                </p>
+<!--                <div class="d-flex pt-2">-->
+<!--                    <a class="btn btn-outline-light btn-social" href=""-->
+<!--                    ><i class="fab fa-twitter"></i-->
+<!--                    ></a>-->
+<!--                    <a class="btn btn-outline-light btn-social" href=""-->
+<!--                    ><i class="fab fa-facebook-f"></i-->
+<!--                    ></a>-->
+<!--                    <a class="btn btn-outline-light btn-social" href=""-->
+<!--                    ><i class="fab fa-youtube"></i-->
+<!--                    ></a>-->
+<!--                    <a class="btn btn-outline-light btn-social" href=""-->
+<!--                    ><i class="fab fa-linkedin-in"></i-->
+<!--                    ></a>-->
+<!--                </div>-->
+            </div>
+            <div class="col-lg-3 col-md-6">
+                <h5 class="text-light mb-4">바로가기</h5>
+                <a class="btn btn-link" href="">펜션소개</a>
+                <a class="btn btn-link" href="">객실안내</a>
+                <a class="btn btn-link" href="">요금안내</a>
+                <a class="btn btn-link" href="">예약현황</a>
+                <a class="btn btn-link" href="">예약하기</a>
+            </div>
+            <div class="col-lg-3 col-md-6">
+                <h5 class="text-light mb-4">지도 관련사이트</h5>
+                <a class="btn btn-link" href="">카카오맵</a>
+                <a class="btn btn-link" href="">네이버 길찾기</a>
+
+            </div>
+{{#sec:hasRole('ADMIN')}}
+            <div class="col-lg-3 col-md-6">
+                <h5 class="text-light mb-4">관리자</h5>
+                <a class="btn btn-link" href="/loginForm">관리자로그인</a>
+            </div>
+{{/sec:hasRole('ADMIN')}}
+        </div>
+    </div>
+    <div class="container">
+        <div class="copyright">
+            <div class="row">
+                <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                    &copy; <a class="border-bottom" href="#">Your Site Name</a>, All
+                    Right Reserved.
+                </div>
+                <div class="col-md-6 text-center text-md-end">
+                    <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
+                    Designed By
+                    <a class="border-bottom" href="https://htmlcodex.com"
+                    >HTML Codex</a
+                    >
+                    <br />Distributed By:
+                    <a href="https://themewagon.com" target="_blank">ThemeWagon</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Footer End -->
+
+<!-- Back to Top -->
+<a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"
+><i class="bi bi-arrow-up"></i
+></a>
+
+<!-- JavaScript Libraries -->
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="lib/wow/wow.min.js"></script>
+<script src="lib/easing/easing.min.js"></script>
+<script src="lib/waypoints/waypoints.min.js"></script>
+<script src="lib/counterup/counterup.min.js"></script>
+<script src="lib/owlcarousel/owl.carousel.min.js"></script>
+<script src="lib/lightbox/js/lightbox.min.js"></script>
+
+<!-- Template Javascript -->
+<script src="js/main.js"></script>
 </body>
 </html>
