--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -1,25 +1,135 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/index.css">
+    <meta charset="utf-8" />
+    <title>Zoofari - Zoo & Safari Park Website Template</title>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <meta content="" name="keywords" />
+    <meta content="" name="description" />
+
+    <!-- Favicon -->
+    <link href="img/favicon.ico" rel="icon" />
+
+    <!-- Google Web Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+            href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500&family=Quicksand:wght@600;700&display=swap"
+            rel="stylesheet"
+    />
+
+    <!-- Icon Font Stylesheet -->
+    <link
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css"
+            rel="stylesheet"
+    />
+    <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css"
+            rel="stylesheet"
+    />
+
+    <!-- Libraries Stylesheet -->
+    <link href="lib/animate/animate.min.css" rel="stylesheet" />
+    <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet" />
+    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" />
+
+    <!-- Customized Bootstrap Stylesheet -->
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
+
+    <!-- Template Stylesheet -->
+    <link href="css/style.css" rel="stylesheet" />
 </head>
+
 <body>
+<!-- Spinner Start -->
+<div
+        id="spinner"
+        class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center"
+>
+    <div
+            class="spinner-border text-primary"
+            style="width: 3rem; height: 3rem"
+            role="status"
+    >
+        <span class="sr-only">Loading...</span>
+    </div>
+</div>
+<!-- Spinner End -->
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+<!-- Topbar Start -->
+<div class="container-fluid bg-light p-0 wow fadeIn" data-wow-delay="0.1s">
+    <div class="row gx-0 d-none d-lg-flex">
+        <div class="col-lg-7 px-5 text-start">
+            <div class="h-100 d-inline-flex align-items-center py-3 me-4">
+                <small class="fa fa-map-marker-alt text-primary me-2"></small>
+                <small>경상북도 경산시 하양읍 하양로 13-13</small>
+            </div>
+            <div class="h-100 d-inline-flex align-items-center py-3">
+                <small class="far fa-clock text-primary me-2"></small>
+                <small>전화문의 : 09:00 ~ 18:00</small>
+            </div>
+        </div>
+        <div class="col-lg-5 px-5 text-end">
+            <div class="h-100 d-inline-flex align-items-center py-3 me-4">
+                <small class="fa fa-phone-alt text-primary me-2"></small>
+                <small>010 2697 7976</small>
+            </div>
+        </div>
+{{#username}}
+        <div class="col-lg-5 px-5 text-end">
+            <div class="h-100 d-inline-flex align-items-center py-3 me-4">
+                <small>관리자님 환영합니다.</small>
+            </div>
+        </div>
+{{/username}}
+    </div>
+</div>
+<!-- Topbar End -->
 
-<!--test button -->
-
-<!--<button><a href="/notice">게시판</a></button>-->
-<!--<button><a href="/notice/write">게시판쓰기</a></button>-->
-
-<!--<button><a href="/loginForm">로그인</a></button>-->
-<!--<button><a href="/joinForm">회원가입</a></button>-->
-<!--<button><a href="/logoutPopup">로그아웃</a></button>-->
-<!--<button><a href="/admin/management">관리자게시판</a></button>-->
-<!--<button><a href="/map">지도</a></button>-->
-<!--<button><a href="/calendar">캘린더</a></button>-->
-<!--<button><a href="/reservation">예약</a></button>-->
+<!-- Navbar Start -->
+<nav
+        class="navbar navbar-expand-lg bg-white navbar-light sticky-top py-lg-0 px-4 px-lg-5 wow fadeIn"
+        data-wow-delay="0.1s"
+>
+    <!--        logo profile-->
+    <a href="testIndex.mustache" class="navbar-brand p-0">
+        <img class="img-fluid me-3" src="img/icon/icon-10.png" alt="Icon" />
+        <h1 class="m-0 text-primary">Zoofari</h1>
+    </a>
+    <button
+            type="button"
+            class="navbar-toggler"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarCollapse"
+    >
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse py-4 py-lg-0" id="navbarCollapse">
+        <div class="navbar-nav ms-auto">
+            <a href="testIndex.mustache" class="nav-item nav-link active">펜션소개</a>
+            <a href="about.html" class="nav-item nav-link">객실소개</a>
+            <a href="service.html" class="nav-item nav-link">요금안내</a>
+            <a href="service.html" class="nav-item nav-link">예약안내</a>
+            <!--          <div class="nav-item dropdown">-->
+            <!--            <a-->
+            <!--              href="#"-->
+            <!--              class="nav-link dropdown-toggle"-->
+            <!--              data-bs-toggle="dropdown"-->
+            <!--              >예약하기</a-->
+            <!--            >-->
+            <!--            <div class="dropdown-menu rounded-0 rounded-bottom m-0">-->
+            <!--              <a href="animal.mustache" class="dropdown-item">Our Animals</a>-->
+            <!--              <a href="membership.html" class="dropdown-item">Membership</a>-->
+            <!--              <a href="visiting.html" class="dropdown-item">Visiting Hours</a>-->
+            <!--              <a href="testimonial.html" class="dropdown-item">ㄴㄴ</a>-->
+            <!--              <a href="404.html" class="dropdown-item">404 Page</a>-->
+            <!--            </div>-->
+            <!--          </div>-->
+            <a href="contact.html" class="nav-item nav-link">예약현황</a>
+        </div>
+        <a href="" class="btn btn-primary"
+        >바로 예약하기<i class="fa fa-arrow-right ms-3"></i
+        ></a>
+    </div>
+</nav>
+<!-- Navbar End -->
